# extract-video-ppt

./: .gitignore  README.md  pyproject.toml
video2ppt/: compare.py  images2pdf.py  video2ppt.py
